moved things up one folder; made some nice template html files

--- a/designapp1/templates/index.html
+++ b/designapp1/templates/index.html
@@ -1,3 +1,11 @@
+{% extends 'base.html' %}
+
+{% block head %}
+    <title>Front page</title>
+{#    favicon ?#}
+{% endblock %}
+
+{% block content %}
 {% if number > 2 %}
     Listing numbers up to {{ number }}
     <ul>
@@ -8,3 +16,4 @@
 {% else %}
     <p>Number is low.</p>
 {% endif %}
+{% endblock %}
