--- a/designapp1/templates/head.html
+++ b/designapp1/templates/head.html
@@ -1,6 +1,7 @@
+{# Things like bootstrap, axios etc are included here, and this code will be imported elsewhere #}
+{#TODO do not deploy with CDNs#}
 <meta charset="UTF-8">
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<!--CDN-->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
