--- a/designapp1/templates/login.html
+++ b/designapp1/templates/login.html
@@ -6,11 +6,10 @@
 {% endblock %}
 
 {% block content %}
-
+{{ message }} <br/>
 <form action="login" method="POST">
-	<input type="text" placeholder="username"/><br/>
-	<input type="password" placeholder="password"/><br/>
-	<input type="submit"/>
+	<!-- {% csrf_token %}-->
+	{{ form }}
 </form>
 
 {% endblock %}
