--- a/designapp1/templates/base.html
+++ b/designapp1/templates/base.html
@@ -8,9 +8,11 @@
         {% endblock %}
     </head>
     <body>
-    {# Room for things like a navbar:#}
-    {#Here you could do things like "include 'navbar.html' " so that it appears on every page#}
+    {# Room for things like a navbar: #}
+    {# Here you could do things like "include 'navbar.html' " so that it appears on every page #}
 
     {% block content %}{% endblock %}
+
+    {% include 'js_imports.html' %}
     </body>
 </html>
