improved js imports

--- a/designapp1/templates/register.html
+++ b/designapp1/templates/register.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <form action="register" method="POST">
-	<!--{% csrf_token% }-->
+{#	{% csrf_token% }#}
 	{{ form }}
 	<input type="submit"/>
 </form>
