--- a/designapp1/templates/login.html
+++ b/designapp1/templates/login.html
@@ -8,7 +8,7 @@
 {% block content %}
 {{ message }} <br/>
 <form action="login" method="POST">
-	<!-- {% csrf_token %}-->
+{#	{% csrf_token %}#}
 	{{ form }}
 	<input type="submit"/>
 </form>
