--- a/designapp1/templates/denys/login.html
+++ b/designapp1/templates/denys/login.html
@@ -19,7 +19,7 @@
                 <form class="text-center p-5" action="home.html">
                     <p class="h4 mb-4">Sign in</p>
                     <!-- Username -->
-                    <input type="username" id="loginFormDataBaseId" class="form-control mb-4" placeholder="Database id" required autofocus>
+                    <input type="text" id="loginFormDataBaseId" class="form-control mb-4" placeholder="Database id" required autofocus>
                     <!-- Password -->
                     <input type="password" id="loginFormPassword" class="form-control mb-4" placeholder="Password" required>
                     <div class="d-flex justify-content-around mb-2">
