--- a/designapp1/templates/login.html
+++ b/designapp1/templates/login.html
@@ -10,6 +10,7 @@
         <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4 border border-dark rounded-lg shadow-lg bg-white">
             <!-- Login Form -->
             <form class="text-center p-5" action="login" method="POST">
+                {% csrf_token %}
                 <p class="h4 mb-4">Sign in</p>
                 {{ form }}
                 <!-- Username -->
