you can now compile things, and you don't even need webpack

--- a/src/frontend/sass/desktop.sass
+++ b/src/frontend/sass/desktop.sass
@@ -1,7 +1,7 @@
 @import styleguide
 
 body
-  font-family: 'Barlow Semi Condensed', sans-serif
+  font-family: 'Barlow Semi Condensed3', sans-serif
 
 .room-name
   text-align: left
