--- a/frontend/css/desktop.css
+++ b/frontend/css/desktop.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Barlow:100,200,300,400,600&display=swap");
 body {
-  font-family: "Barlow Semi Condensed", sans-serif; }
+  font-family: "Barlow Semi Condensed3", sans-serif; }
 
 .room-name {
   text-align: left;
