--- a/designapp1/templates/index.html
+++ b/designapp1/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block head %}
     <title>Front page</title>
+    <button onclick="displayCourses()"></button>
 {#    favicon ?#}
 {% endblock %}
 
