--- a/designapp1/templates/head.html
+++ b/designapp1/templates/head.html
@@ -4,5 +4,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 {#<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">#}
 
-<link rel="stylesheet" href="/static/css/stylesheet.css">
-<script defer src="/static/scripts/main.js"></script>
+<link rel="stylesheet" href="/static/css/user_coursechoice.css">
+<script defer src="/static/scripts/user_coursechoice.js"></script>
