--- a/designapp1/templates/base.html
+++ b/designapp1/templates/base.html
@@ -1,17 +1,21 @@
 {#Basic html template that all pages will extend #}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        {% include 'head.html' %}
-        {% block head %}
-            <title>Database environment manager</title>
-        {% endblock %}
-    </head>
-    <body>
-    {# Room for things like a navbar: #}
-    {# Here you could do things like "include 'navbar.html' " so that it appears on every page #}
+<head>
+    {% include 'head.html' %}
+    {% block head %}
+        <title>Database environment manager</title>
+    {% endblock %}
+    {% block scripts %}
+        <link rel="stylesheet" href="/static/css/main.css">
+        <script defer src="/static/scripts/main.js"></script>
+    {% endblock %}
+</head>
+<body>
+{# Room for things like a navbar: #}
+{# Here you could do things like "include 'navbar.html' " so that it appears on every page #}
 
-    {% block content %}{% endblock %}
-    {% include 'js_imports.html' %}
-    </body>
+{% block content %}{% endblock %}
+{% include 'js_imports.html' %}
+</body>
 </html>
