selecting courses almos tworks

--- a/src/frontend/sass/main.sass
+++ b/src/frontend/sass/main.sass
@@ -1,5 +1,6 @@
 @import styleguide
-@import ~bootstrap
+@import "~bootstrap/scss/bootstrap"
+@import "~bootstrap-select/sass/bootstrap-select"
 
 body
   font-family: 'Barlow Semi Condensed3', sans-serif
