--- a/designapp1/templates/courses.html
+++ b/designapp1/templates/courses.html
@@ -5,32 +5,49 @@
 {% endblock %}
 
 {% block scripts %}
-        <link rel="stylesheet" href="/static/css/main.css">
-        <script defer src="/static/scripts/courses.js"></script>
-{% endblock%}
+    <link rel="stylesheet" href="/static/css/main.css">
+    <script defer src="/static/scripts/courses.js"></script>
+{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4 border border-dark rounded-lg shadow-lg bg-white">
-            <!-- Login Form -->
-            <form class="text-center p-5" action="login" method="POST">
-                {% csrf_token %}
-                <p class="h4 mb-4">Sign in</p>
-                <!-- Username -->
-                <!-- <input type="username" id="loginId" class="form-control mb-4" placeholder="Database id" required autofocus> -->
-                <!-- Password -->
-                <!-- <input type="password" id="loginPw" class="form-control mb-4" placeholder="Password" required> -->
-                <div class="d-flex justify-content-around mb-2 text-danger font-weight-light">
-                </div>
-                    <!-- Forgot Password -->
-                    <a href="missing">Forgot password?</a>
-                <!-- Sign in button -->
-                <button class="btn btn-info btn-block my-4" type="submit" onclick="f()">Sign in</button>
-                <!-- Register -->
-                No account? <a href="register">Register here</a>
-            </form>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-lg-10 offset-lg-1  border border-dark rounded-lg shadow-lg bg-white">
+                <!-- Login Form -->
+                <form class="text-center p-5" action="login" method="POST">
+                    {% csrf_token %}
+                    <p class="h4 mb-4">Select a course</p>
+                    <!-- Username -->
+                    <!-- <input type="username" id="loginId" class="form-control mb-4" placeholder="Database id" required autofocus> -->
+                    <!-- Password -->
+                    <!-- <input type="password" id="loginPw" class="form-control mb-4" placeholder="Password" required> -->
+                    <div class="d-flex justify-content-around mb-2 text-danger font-weight-light">
+                    </div>
+
+
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="courses-dropdown">Select a course</label>
+                            <select class="form-control my-select" id="courses-dropdown">
+                                <option>default</option>
+                                <option>option</option>
+
+                            </select>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="group-dropdown">Group</label>
+                            <select id="group-dropdown" class="form-control">
+
+                            </select>
+                        </div>
+
+                    </div>
+
+
+                    <button class="btn btn-info my-4 " type="submit" onclick="f()">Select course</button>
+
+                </form>
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
