--- a/designapp1/templates/courses.html
+++ b/designapp1/templates/courses.html
@@ -28,16 +28,14 @@
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="courses-dropdown">Select a course</label>
-                            <select class="form-control my-select" id="courses-dropdown">
-                                <option>default</option>
-                                <option>option</option>
-
+                            <select class="form-control" id="courses-dropdown">
+                                <option disabled selected value> select an option</option>
                             </select>
                         </div>
                         <div class="form-group col-md-6">
                             <label for="group-dropdown">Group</label>
                             <select id="group-dropdown" class="form-control">
-
+                                <option disabled selected value> select an option</option>
                             </select>
                         </div>
 
