--- a/src/frontend/sass/main.sass
+++ b/src/frontend/sass/main.sass
@@ -8,3 +8,8 @@ body
 .room-name2
   text-align: right
   color: white
+
+.bootstrap-select .dropdown-item.active, .dropdown-item:active
+  background-color: $cyan
+  //border-color: #17a2b8
+
