--- a/designapp1/templates/courses.html
+++ b/designapp1/templates/courses.html
@@ -34,15 +34,15 @@
                         </div>
                         <div class="form-group col-md-6">
                             <label for="group-dropdown">Group</label>
-                            <select id="group-dropdown" class="form-control">
-                                <option disabled selected value> select an option</option>
+                            <select id="group-dropdown" class="form-control" disabled>
+                                <option disabled selected value> Selecting groups is not a thing yet</option>
                             </select>
                         </div>
 
                     </div>
 
 
-                    <button class="btn btn-info my-4 " type="submit" onclick="f()">Select course</button>
+                    <button class="btn btn-info my-4" id="credentials-button" type="submit">Get credentials</button>
 
                 </form>
             </div>
