--- a/designapp1/templates/courses.html
+++ b/designapp1/templates/courses.html
@@ -29,13 +29,13 @@
                         <div class="form-group col-md-6">
                             <label for="courses-dropdown">Select a course</label>
                             <select class="form-control" id="courses-dropdown">
-                                <option disabled selected value> select an option</option>
+                                <option disabled selected value="0"> select an option</option>
                             </select>
                         </div>
                         <div class="form-group col-md-6">
                             <label for="group-dropdown">Group</label>
                             <select id="group-dropdown" class="form-control" disabled>
-                                <option disabled selected value> Selecting groups is not a thing yet</option>
+                                <option disabled selected value="0"> Selecting groups is not a thing yet</option>
                             </select>
                         </div>
 
