--- a/designapp1/templates/courses.html
+++ b/designapp1/templates/courses.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-lg-10 offset-lg-1  border border-dark rounded-lg shadow-lg bg-white">
                 <!-- Login Form -->
-                <form class="text-center p-5">
+                <div class="text-center p-5">
 {#                    {% csrf_token %}#}
                     <p class="h4 mb-4">Select a course</p>
                     <!-- Username -->
@@ -44,7 +44,7 @@
 
                     <button class="btn btn-info my-4" id="credentials-button">Get credentials</button>
 
-                </form>
+                </div>
             </div>
         </div>
     </div>
